--- a/Mygame/Proto.html
+++ b/Mygame/Proto.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8" />
   <title>カードバトル</title>
@@ -7,44 +8,59 @@
   <!-- CSSファイルの読み込み -->
   <link rel="stylesheet" href="Proto.css" />
 </head>
+
 <body>
   <!-- ゲームタイトル -->
   <h1>カードバトル</h1>
 
-  <!-- 敵のHP表示とバー -->
-  <h2>敵 HP: <span id="enemy-hp">30</span></h2>
-  <div class="hp-bar">
-    <progress id="enemy-hp-bar" value="30" max="30"></progress>
+  <div class="character-area">
+    <!-- 敵の立ち絵 -->
+    <img id="enemy-img" src="images/yurei_03.png" alt="敵" />
+
+    <!-- 敵のHP表示とバー -->
+    <div class="hp-area">
+      <h2>敵 HP: <span id="enemy-hp">30</span></h2>
+      <div class="hp-bar">
+        <progress id="enemy-hp-bar" value="30" max="30"></progress>
+      </div>
+    </div>
   </div>
 
-  <!-- プレイヤーのHP表示とバー -->
-  <h2>あなたの HP: <span id="player-hp">20</span></h2>
-  <div class="hp-bar">
-    <progress id="player-hp-bar" value="20" max="20"></progress>
+  <div class="character-area">
+    <!-- プレイヤーの立ち絵 -->
+    <img id="player-img" src="images/character_kishi_man_03_blue.png" alt="プレイヤー" />
+    <div class="hp-area">
+      <!-- プレイヤーのHP表示とバー -->
+      <h2>あなたの HP: <span id="player-hp">20</span></h2>
+      <div class="hp-bar">
+        <progress id="player-hp-bar" value="20" max="20"></progress>
+      </div>
+    </div>
   </div>
 
-  <!-- ターン表示用メッセージ -->
-  <div id="turn-indicator">あなたのターン！</div>
+    <!-- ターン表示用メッセージ -->
+    <div id="turn-indicator">あなたのターン！</div>
 
-  <!-- プレイヤーへの指示文 -->
-  <h3>カードを1枚選んで行動!</h3>
+    <!-- プレイヤーへの指示文 -->
+    <h3>カードを1枚選んで行動!</h3>
 
-  <!-- 山札と捨て札の情報表示 -->
-  <div id="deck-info">
-    山札: <span id="deck-count">0</span> 枚
-    捨て札: <span id="discard-count">0</span> 枚
-  </div>
+    <!-- 山札と捨て札の情報表示 -->
+    <div id="deck-info">
+      山札: <span id="deck-count">0</span> 枚
+      捨て札: <span id="discard-count">0</span> 枚
+    </div>
 
-  <!-- 手札のカード表示エリア -->
-  <div id="hand"></div>
+    <!-- 手札のカード表示エリア -->
+    <div id="hand"></div>
 
-  <!-- 戦闘ログ表示エリア -->
-  <p id="log" style="white-space: pre-wrap;"></p>
+    <!-- 戦闘ログ表示エリア -->
+    <p id="log" style="white-space: pre-wrap;"></p>
 
-  <!-- 勝敗結果表示エリア -->
-  <p id="result" style="font-size: 1.2em; margin-top: 20px;"></p>
+    <!-- 勝敗結果表示エリア -->
+    <p id="result" style="font-size: 1.2em; margin-top: 20px;"></p>
 
-  <!-- JavaScriptの読み込み -->
-  <script src="Proto.js"></script>
+    <!-- JavaScriptの読み込み -->
+    <script src="Proto.js"></script>
 </body>
+
 </html>
