背景画像を追加し、ゲーム画面のスタイルを改善

--- a/Mygame/Proto.html
+++ b/Mygame/Proto.html
@@ -7,6 +7,14 @@
 
   <!-- CSSファイルの読み込み -->
   <link rel="stylesheet" href="Proto.css" />
+  <style>
+    body {
+      background-image: url('images/ruinsBg.jpg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
+  </style>
 </head>
 
 <body>
