HPバーのスタイルを調整し、手札エリアのレイアウトを改善。デッキ情報の表示を更新するためのデバッグ用ログを追加。

--- a/Mygame/Proto.html
+++ b/Mygame/Proto.html
@@ -7,53 +7,40 @@
 
   <!-- CSSファイルの読み込み -->
   <link rel="stylesheet" href="Proto.css" />
-  <style>
-    body {
-      background-image: url('images/ruinsBg.jpg');
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-    }
-  </style>
 </head>
 
 <body>
-  <!-- ゲームタイトル -->
-  <h1>カードバトル</h1>
+  <div class="game-wrapper">
+    <div class="character-area">
+      <!-- 敵の立ち絵 -->
+      <img id="enemy-img" src="images/yurei_03.png" alt="敵" />
 
-  <div class="character-area">
-    <!-- 敵の立ち絵 -->
-    <img id="enemy-img" src="images/yurei_03.png" alt="敵" />
-
-    <!-- 敵のHP表示とバー -->
-    <div class="hp-area">
-      <h2>敵 HP: <span id="enemy-hp">30</span></h2>
-      <div class="hp-bar">
-        <progress id="enemy-hp-bar" value="30" max="30"></progress>
+      <!-- 敵のHP表示とバー -->
+      <div class="hp-area">
+        <h2>敵 HP: <span id="enemy-hp">30</span></h2>
+        <div class="hp-bar">
+          <progress id="enemy-hp-bar" value="30" max="30"></progress>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="character-area">
-    <!-- プレイヤーの立ち絵 -->
-    <img id="player-img" src="images/character_kishi_man_03_blue.png" alt="プレイヤー" />
-    <div class="hp-area">
-      <!-- プレイヤーのHP表示とバー -->
-      <h2>あなたの HP: <span id="player-hp">20</span></h2>
-      <div class="hp-bar">
-        <progress id="player-hp-bar" value="20" max="20"></progress>
+    <div class="character-area">
+      <!-- プレイヤーの立ち絵 -->
+      <img id="player-img" src="images/character_kishi_man_03_blue.png" alt="プレイヤー" />
+      <div class="hp-area">
+        <!-- プレイヤーのHP表示とバー -->
+        <h2>あなたの HP: <span id="player-hp">20</span></h2>
+        <div class="hp-bar">
+          <progress id="player-hp-bar" value="20" max="20"></progress>
+        </div>
       </div>
     </div>
-  </div>
 
     <!-- ターン表示用メッセージ -->
-    <div id="turn-indicator">あなたのターン！</div>
-
-    <!-- プレイヤーへの指示文 -->
-    <h3>カードを1枚選んで行動!</h3>
+    <div id="turn-indicator" class="ui-box">あなたのターン！</div>
 
     <!-- 山札と捨て札の情報表示 -->
-    <div id="deck-info">
+    <div id="deck-info" class="ui-box">
       山札: <span id="deck-count">0</span> 枚
       捨て札: <span id="discard-count">0</span> 枚
     </div>
@@ -62,13 +49,14 @@
     <div id="hand"></div>
 
     <!-- 戦闘ログ表示エリア -->
-    <p id="log" style="white-space: pre-wrap;"></p>
+    <p id="log" class="ui-box" style="white-space: pre-wrap;"></p>
 
     <!-- 勝敗結果表示エリア -->
-    <p id="result" style="font-size: 1.2em; margin-top: 20px;"></p>
+    <p id="result" class="ui-box" style="font-size: 1.2em; margin-top: 20px;"></p>
 
     <!-- JavaScriptの読み込み -->
     <script src="Proto.js"></script>
+  </div>
 </body>
 
 </html>
