キャラクターを横並びに

--- a/Mygame/Proto.html
+++ b/Mygame/Proto.html
@@ -11,30 +11,30 @@
 
 <body>
   <div class="game-wrapper">
-    <div class="character-area">
-      <!-- 敵の立ち絵 -->
-      <img id="enemy-img" src="images/yurei_03.png" alt="敵" />
+    <div class="character-row">
+      <!-- 敵 -->
+      <div class="character-area">
+        <img id="enemy-img" src="images/yurei_03.png" alt="敵" />
+        <div class="hp-area">
+          <h2>敵 HP: <span id="enemy-hp">30</span></h2>
+          <div class="hp-bar">
+            <progress id="enemy-hp-bar" value="30" max="30"></progress>
+          </div>
+        </div>
+      </div>
 
-      <!-- 敵のHP表示とバー -->
-      <div class="hp-area">
-        <h2>敵 HP: <span id="enemy-hp">30</span></h2>
-        <div class="hp-bar">
-          <progress id="enemy-hp-bar" value="30" max="30"></progress>
+      <!-- プレイヤー -->
+      <div class="character-area">
+        <img id="player-img" src="images/character_kishi_man_03_blue.png" alt="プレイヤー" />
+        <div class="hp-area">
+          <h2>あなたの HP: <span id="player-hp">20</span></h2>
+          <div class="hp-bar">
+            <progress id="player-hp-bar" value="20" max="20"></progress>
+          </div>
         </div>
       </div>
     </div>
 
-    <div class="character-area">
-      <!-- プレイヤーの立ち絵 -->
-      <img id="player-img" src="images/character_kishi_man_03_blue.png" alt="プレイヤー" />
-      <div class="hp-area">
-        <!-- プレイヤーのHP表示とバー -->
-        <h2>あなたの HP: <span id="player-hp">20</span></h2>
-        <div class="hp-bar">
-          <progress id="player-hp-bar" value="20" max="20"></progress>
-        </div>
-      </div>
-    </div>
 
     <!-- ターン表示用メッセージ -->
     <div id="turn-indicator" class="ui-box">あなたのターン！</div>
